--- a/app/src/main/res/layout/activity_card.xml
+++ b/app/src/main/res/layout/activity_card.xml
@@ -30,6 +30,7 @@
         android:text="@string/progress_text"
         android:textColor="@color/black"
         android:textSize="17sp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title_text" />
@@ -43,8 +44,9 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:indeterminate="false"
-        android:progress="100"
+        android:progress="0"
         android:progressTint="@color/black"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/progress_text" />
